# tinycuda

./: CMakeLists.txt  README.md
cudahair/: CMakeLists.txt  dummy_kernel.cu  dummy_kernel.cuh  main.cpp
include/: HairDataManager.h  HairLoader.h  HairSimulator.h  Shader.h  tiny.cuh
shader/: vertex.glsl
src/: HairDataManager.cpp  HairLoader.cpp  HairSimulator.cpp  Shader.cpp  main.cpp  tiny.cu
tinyhair/: CMakeLists.txt  main.cpp
tinyhair/shader/: fragment.glsl
